# neuron-firmware

./: CMakeLists.txt  README.md  config.py  install.sh  main.py  mcp3464.py  pico_sdk_import.cmake  protocol.py  spi.py
h/: led_indicator.h  mcp3464.h  neuron_config.h  protocol.h  spi.h  tusb_config.h
micropython-port/: makefile  timer.py
src/: CMakeLists.txt  led_indicator.c  main.c  mcp3464.c  mcpclock.pio  protocol.c  spi.c  usb_descriptors.c
